--- a/JupyterNotebooks/Exercises_06.ipynb
+++ b/JupyterNotebooks/Exercises_06.ipynb
@@ -122,7 +122,7 @@
     "\\cosh (\\beta h) \\pm \\left[ e^{2\\beta J} \\cosh^2 (\\beta h) - 2\\sinh (2\\beta J) \\right]^{1/2}$, \n",
     "e $\\beta=\\frac{1}{k_b T} = \\frac{1}{T}$.\n",
     "\n",
-    "Com'è noto dalla meccanica statistica di equilibrio, dalla funzione di partizione possiamo ricavare:\n",
+    "Com'è noto dalla meccanica statistica, dalla funzione di partizione possiamo ricavare:\n",
     "\n",
     "- L'**Energia Interna** per spin (con $h=0$):\n",
     "\n",
@@ -152,7 +152,7 @@
     "\\frac{M(N,T,h)}{N}=   \\frac{k_B T}{N} \\dfrac{\\partial \\ln Z}{\\partial h} = \\frac{e^{\\beta J}\\; \\sinh(\\beta h)}{Z} \\; \\Bigl[\\lambda_1^{N-1}\\cdot \\Bigl(1+\\frac{e^{\\beta J}\\; \\cosh(\\beta h)}{\\sqrt{e^{2\\beta J} \\cosh^2 (\\beta h) - 2\\sinh (2\\beta J)}}\\Bigr) + \\lambda_2^{N-1}\\cdot \\Bigl(1-\\frac{e^{\\beta J}\\; \\cosh(\\beta h)}{\\sqrt{e^{2\\beta J} \\cosh^2 (\\beta h) - 2\\sinh (2\\beta J)}}\\Bigr)\\Bigr]\n",
     "$$\n",
     "\n",
-    "Se $h=0$ la magnetizzazione $M(N,T,h=0)=\\langle \\sum_{i=1,N}s_i \\rangle =0$ in quanto nel modello di Ising 1D non è possibile avere transizione di fase e quindi un sistema ferromagnetico.\n",
+    "Se $h=0$ la magnetizzazione $M(N,T,h=0)=\\langle \\sum_{i=1,N}s_i \\rangle =0$ non ci sono interazioni che inducono l'allineamento degli spin e il sistema rimane non magnetizzato.\n",
     "\n",
     "- La **suscettività magnetica** (con $h=0$):\n",
     "\n",
@@ -168,7 +168,9 @@
    "metadata": {},
    "source": [
     "#### Campionamento Metropolis e Gibbs\n",
-    "Gli algoritmi di campionamento del peso di Boltzmann utilizzati sono il campionamento di Metropolis e il campionamento di Gibbs, che determinano il modo in cui lo spazio delle configurazioni di spin viene visitato. La condizione di temperatura costante implica che il sistema di spin nel modello di Ising 1D si trova in un *ensemble canonico*: il sistema scambia, cioè, energia con un bagno termico di capacità termica molto grande rispetto a quella del sistema. Questo scambio di energia permette, dal punto di vista macroscopico, di mantenere la temperatura costante del sistema durante la simulazione. In altre parole, il sistema di spin si trova in un ambiente che funge da regolatore di temperatura, garantendo che la temperatura del sistema rimanga costante durante la simulazione.\n",
+    "Gli algoritmi di campionamento del peso di Boltzmann che utilizzo sono il campionamento di Metropolis e il campionamento di Gibbs, che determinano il modo in cui lo spazio delle configurazioni di spin viene visitato. La condizione di temperatura costante implica che il sistema di spin nel modello di Ising 1D si trova in un *ensemble canonico*: il sistema scambia, cioè, energia con un bagno termico di capacità termica molto grande rispetto a quella del sistema. Questo scambio di energia permette, dal punto di vista macroscopico, di mantenere la temperatura costante del sistema durante la simulazione. In altre parole, il sistema di spin si trova in un ambiente che funge da regolatore di temperatura, garantendo che la temperatura del sistema rimanga costante durante la simulazione.\n",
+    "\n",
+    "Mostro ora come lavorano i diversi algoritmi in questo caso specifico:\n",
     "\n",
     "- L'algoritmo di Metropolis modifica l'orientazione di uno spin scelto a caso, passando da una configurazione $a$ a una configurazione $b$. La mossa viene accettata con una certa probabilità $A(b|a)$, che dipende dalla differenza di energia $\\Delta E$ tra le due configurazioni e dalla temperatura $T$ del sistema. In particolare, la mossa viene sempre accettata se la nuova configurazione $b$ è più probabile della configurazione precedente $a$, mentre viene accettata con probabilità $\\exp{\\left(-\\beta(\\Delta E)\\right)}$ se $b$ è meno probabile di $a$. In formule:\n",
     "$$ A(b|a) = \\min{\\left(1, \\, \\exp{\\left[ \\beta \\Delta E\\right]} \\right)},  $$ dove $\\Delta E $ è la variazione di energia per lo spin-flip, tenendo conto che l'interazione è limitata ai primi vicini.\n",
@@ -178,7 +180,44 @@
     "dove $\\Delta E$ è la differenza di energia tra la configurazione in cui lo spin $i$-esimo è up e la configurazione in cui lo spin è down. In questo modo, l'algoritmo di Gibbs non rigetta alcun tentativo, il che lo rende più efficiente dell'algoritmo di Metropolis.\n",
     "\n",
     "\n",
-    "In sintesi, entrambi gli algoritmi di Metropolis e Gibbs sono utilizzati per generare configurazioni casuali di spin nel sistema di Ising 1D a una determinata temperatura. L'algoritmo di Metropolis cambia l'orientazione di uno spin scelto a caso e accetta la mossa con una certa probabilità, mentre l'algoritmo di Gibbs genera una nuova configurazione di spin imponendo il valore dello spin selezionato."
+    "In sintesi, entrambi gli algoritmi di Metropolis e Gibbs sono utilizzati per generare configurazioni casuali di spin nel sistema di Ising 1D a una determinata temperatura. L'algoritmo di Metropolis cambia l'orientazione di uno spin scelto a caso e accetta la mossa con una certa probabilità, mentre l'algoritmo di Gibbs genera una nuova configurazione di spin imponendo il valore dello spin selezionato.\n",
+    "\n",
+    "Mostro di seguito l'implementazione in c++ dei due algoritmi all'interno della funzione `Move()`:\n",
+    "```c++\n",
+    "// Metropolis\n",
+    "o = (int)(rnd.Rannyu() * nspin);\n",
+    "\n",
+    "if(metro == 1){\n",
+    "\n",
+    "    int s_flip = -s[o];\n",
+    "\n",
+    "    energy_old = Boltzmann(s[o], o);\n",
+    "    energy_new = Boltzmann(s_flip, o);\n",
+    "\n",
+    "    double A = std::min(1., exp(-Beta * (energy_new - energy_old)));\n",
+    "\n",
+    "    if(rnd.Rannyu() < A){\n",
+    "        s[o] = s_flip; \n",
+    "        accepted++;\n",
+    "    }\n",
+    "    attempted++;\n",
+    "} \n",
+    "// Gibbs\n",
+    "else{\n",
+    "    energy_up = Boltzmann(1, o);\n",
+    "    energy_down = Boltzmann(-1, o);\n",
+    "    p = exp(-Beta * (energy_down - energy_up));\n",
+    "    if (rnd.Rannyu() < 1 / (1 + p)) {            \n",
+    "        s[o] = 1;\n",
+    "        accepted++;\n",
+    "    }\n",
+    "    else{\n",
+    "        s[o] = -1;\n",
+    "        accepted++;\n",
+    "    }\n",
+    "    attempted++;\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -191,16 +230,16 @@
     "- `nspin`: numero di spin che prendono parte alla simulazione. In questa esercitazione è fissato a $50$;\n",
     "- `J`: momento angolare totale. In questa esercitazione è fissato al valore $1$;\n",
     "- `h`: campo esterno. Quando non specificato si assume nullo;\n",
-    "- `metro`: parametro booleano per specificare se utilizzare un campionamento Metropolis ($1$) o Gibbs($0$);\n",
+    "- `metro`: parametro booleano per specificare se utilizzare un campionamento Metropolis ($1$) o Gibbs ($0$);\n",
     "- `nblk`: numero di blocchi;\n",
     "- `nstep`: numero di steps per blocco.\n",
     "\n",
-    "Il programma è in grado di lavorare in modalità \"equilibrazione\" o \"simulazione\":\n",
+    "Il programma è stato costruito a partire dal codice fornito. Come per l'esercitazione 4, il programma è in grado di lavorare in modalità \"equilibrazione\" o \"simulazione\":\n",
     "```\n",
-    "Usage: './Exercise_06.1 <equilibration>' with <equilibration> = {true, false, null}\n",
+    "Usage: ./Exercise_06.1 <equilibration>' with <equilibration> = {true, false}\n",
     "```\n",
     "\n",
-    "Durante l'esecuzione, il programma chiederà all'utente di specificare se si desidera cancellare i file di output preesistenti, in modo da non mischiare assieme simulazioni diverse, visto che tutti i file sono aperti in modalità `append` dal programma.\n",
+    "Durante l'esecuzione, il programma chiederà all'utente di specificare se si desidera cancellare i file di output pre-esistenti, in modo da non mischiare assieme simulazioni diverse, visto che tutti i file sono aperti in modalità `append` dal programma.\n",
     "\n",
     "In modalità \"equilibrazione\" il codice permette di studiare l'andamento delle varie grandezze d'interessere al variare del numero di blocchi con il metodo del *data blocking*. In questo modo si può intuire il numero di step necessari al sistema per equilibrarsi. \n",
     "\n",
@@ -231,7 +270,7 @@
     "#### Equilibrazione\n",
     "Durante la fase di inizializzazione (tramite la funzione `Input()`), il codice genera una configurazione casuale di spin, che corrisponde alla condizione in cui la temperatura $T$ tende ad infinito. Durante l'esecuzione del programma, la funzione `Move()` modifica la configurazione del sistema in base alla temperatura impostata tramite il parametro `beta`, passato attraverso il file `input-output/input.dat`. Dopo un certo numero di chiamate a questa funzione, ci si aspetta che il sistema raggiunga una condizione stazionaria che riflette la temperatura impostata in input, e che quindi la fase di equilibrazione del sistema sia terminata.\n",
     "\n",
-    "Di seguito si mostra la fase di equilibrazione per la suscettività magnetica, l'energia interna e la capacità termica, con 100 blocchi composti da 100 step ciascuno. Per assicurarsi che la fase di equilibrazione non dipenda dalla temperatura scelta si sono simulate quattro diverse temperature nel range $\\left[0.5,\\,2.0 \\right]$."
+    "Di seguito si mostra la fase di equilibrazione per la suscettività magnetica, l'energia interna e la capacità termica, con 100 blocchi composti da 100 steps ciascuno. Per assicurarsi che la fase di equilibrazione non dipenda dalla temperatura scelta si sono simulate quattro diverse temperature nel range $\\left[0.5,\\,2.0 \\right]$."
    ]
   },
   {
@@ -658,7 +697,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I dati riportati nei grafici mostrano una buona compatibilità tra le misure e le previsioni teoriche, il che suggerisce che il numero di passi scelto è sufficientemente grande da coprire efficacemente lo spazio delle configurazioni, anche a basse temperature, dove l'ergodicità di Metropolis potrebbe non essere ideale."
+    "I dati riportati nei grafici mostrano una buona compatibilità tra le misure e le previsioni teoriche, il che suggerisce che il numero di passi scelto è sufficientemente grande da coprire efficacemente lo spazio delle configurazioni, anche a basse temperature, dove l'ergodicità di Metropolis potrebbe non essere ideale, a causa del fatto che a basse temperature, le fluttuazioni termiche sono ridotte e l'energia termica disponibile per superare le barriere energetiche è limitata. Questo significa che il sistema potrebbe trovarsi intrappolato in minimi locali di energia o in configurazioni metastabili, senza essere in grado di esplorare completamente lo spazio delle fasi. \n",
+    "\n",
+    "Quello che mostrano chiaramente questi grafici, infatti è che più la temperatura è bassa, più i valori calcolati fluttuano attorno al valore esatto, pur restando all'interno di $\\sim 1 \\sigma$."
    ]
   }
  ],
