--- a/JupyterNotebooks/Exercises_11/Exercise_11.1.ipynb
+++ b/JupyterNotebooks/Exercises_11/Exercise_11.1.ipynb
@@ -89,13 +89,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Soluzione"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Risoluzione\n",
+    "\n",
     "Considero la retta\n",
     "$$\n",
     "f(x)=2x+1\n",
@@ -393,8 +388,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Osservazioni generali\n",
-    "Quanto più i dati forniti al modello per calibrarsi e testarsi sono rumorosi, tanto più saranno necessarie molte epoche affinché la calibrazione produca risultati accettabili, ossia una buona capacità del modello di prevedere dati sulla retta. In generale, le *loss functions* diminuiscono drasticamente entro una decina di epoche, oltre le quali la continua calibrazione non comporta miglioramenti significativi nella capacità predittiva del modello.\n",
+    "Dai grafici risolta evidente che la predittività del modello è ottima."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Osservazioni\n",
+    "Quanto più i dati forniti al modello per calibrarsi e testarsi sono rumorosi, tanto più saranno necessarie molte epoche affinché la calibrazione produca risultati accettabili. In generale, le *loss functions* diminuiscono drasticamente entro una decina di epoche, oltre le quali la continua calibrazione non comporta miglioramenti significativi nella capacità predittiva del modello.\n",
     "\n",
     "Come detto in precedenza, il modello è tanto più corretto quanti più sono i dati dedicati alla fase di *training*. Da questo esempio, modificando il valore di $N_{train}$ si può capire rapidamente come un modello di Machine Learning sia assolutamente inutile se il numero dei dati di *training* non è adeguato.  \n",
     "\n",
