--- a/JupyterNotebooks/Exercises_06.ipynb
+++ b/JupyterNotebooks/Exercises_06.ipynb
@@ -176,7 +176,7 @@
     "$$ A(b|a) = \\min{\\left(1, \\, \\exp{\\left[ \\beta \\Delta E\\right]} \\right)},  $$ dove $\\Delta E $ è la variazione di energia per lo spin-flip, tenendo conto che l'interazione è limitata ai primi vicini.\n",
     "\n",
     "- L'algoritmo di Gibbs, invece, scelto casualmente uno spin della configurazione $a$, propone un nuovo valore per esso, indipendentemente dal suo valore nella configuazione $a$, estrapolato dalla distribuzione condizionale definita dagli altri spin vicini:\n",
-    "$$p(s_{k}=\\pm 1) = \\frac{1}{1 + \\exp{[- 2 \\beta \\Delta E]}},$$\n",
+    "$$p(s_{k}=\\pm 1) = \\frac{1}{1 + \\exp{[\\mp \\beta \\Delta E]}},$$\n",
     "dove $\\Delta E$ è la differenza di energia tra la configurazione in cui lo spin $i$-esimo è up e la configurazione in cui lo spin è down. In questo modo, l'algoritmo di Gibbs non rigetta alcun tentativo, il che lo rende più efficiente dell'algoritmo di Metropolis.\n",
     "\n",
     "\n",
