--- a/JupyterNotebooks/Exercises_07.ipynb
+++ b/JupyterNotebooks/Exercises_07.ipynb
@@ -421,7 +421,7 @@
     "    }\n",
     "}\n",
     "```\n",
-    "dove `box = pow(vol, 1.0 / 3.0)`, `vol = (double)npart/rho` e `bin_size = box /  (2.0 * (double)n_bins)`. All'interno della funzione `Averages()`, che nell'esercitazione 4 si limitava a scrivere le medie calcolate su file di testo esterni, ho poi calcolato la media tenendo conto della normalizzazione e l'errore. Come al solito ho usato il metodo del *data blocking*, ma visto che i dati che uso sono relativi all'ultimo blocco, evito di calcare ogni volta anche l'errore sulla misura, risparmiando (poco) tempo computazionale. Non mostro frammenti di codice perché il calcolo che ho implementato ha la stessa forma di quello della pressione, escluso il ciclo `for` necessario per iterare su tutte le componenti di `walker`.\n",
+    "dove `box = pow(vol, 1.0 / 3.0)`, `vol = (double)npart/rho` e `bin_size = box /  (2.0 * (double)n_bins)`. All'interno della funzione `Averages()`, che nell'esercitazione 4 si limitava a scrivere le medie calcolate su file di testo esterni, ho poi calcolato la media tenendo conto della normalizzazione e l'errore. Come al solito ho usato il metodo del *data blocking*. Non mostro frammenti di codice perché il calcolo che ho implementato ha la stessa forma di quello della pressione, escluso il ciclo `for` necessario per iterare su tutte le componenti di `walker`.\n",
     "\n",
     "Mostro di seguito il risultato delle simulazioni."
    ]
