--- a/JupyterNotebooks/Exercises_09.ipynb
+++ b/JupyterNotebooks/Exercises_09.ipynb
@@ -154,7 +154,7 @@
     "$$ \n",
     "dove $r$ è un numero casuale compreso tra 0 e 1 e $p$ è un opportuno esponente. Le mutazioni sono implementate attraverso operatori di mutazione, ed ad ognuna di esse è associata una probabilità di realizzarsi (tipicamente $p^{(i)}_m < 10\\%$). Le mutazioni che ho usato sono quelle consigliate nella consegna dell'esercizio, per cui mutazioni di riarrangiamento dei geni e di crossover tra \"cromosomi\". In generale, per un algoritmo genetico, più mutazioni si implementano, meglio viene sondato lo spazio delle soluzioni, evitando, quindi, la convergenza dell'algoritmo verso minimi locali. \n",
     "\n",
-    "- I figli degli individui mutati vengono salvati in una nuova generazione, e il processo riparte dal primo punto in modo ciclico. Questo ciclo continua fino a quando non viene soddisfatta una condizione di stop (nel mio caso il ragiungimento del numero fissato di cicli)."
+    "- I figli degli individui mutati vengono salvati in una nuova generazione, e il processo riparte dal primo punto in modo ciclico. Questo ciclo continua fino a quando non viene soddisfatta una condizione di stop (nel mio caso il raggiungimento del numero fissato di cicli)."
    ]
   },
   {
@@ -165,16 +165,16 @@
     "#### Commenti sul codice\n",
     "\n",
     "Il codice che ho realizzato è un codice orientato a oggetti. Le classi che ho costruito sono le seguenti: \n",
-    "- `Individual`: si stratta della classe principale, che è costutituita da un vettore `genes` di dimesione `Ngenes` corrispondente al numero delle città che deve visitare il commesso. Questa classe è munita di una serie di metodi che implementano le mutazioni e il crossover.\n",
+    "- `Individual`: si tratta della classe principale, che è costutituita da un vettore `genes` di dimesione `Ngenes` corrispondente al numero delle città che deve visitare il commesso. Questa classe è munita di una serie di metodi che implementano le mutazioni e il crossover.\n",
     "- `Individual_test`: questa classe implementa alcuni semplici e veloci test per verificare la correttezza del codice.\n",
-    "- `Population`: è una classe che può essere visualizzata come un'insieme di `Individual`. Questa classe implementa il metodo `reproduce` genera una nuova popolazione a partire da quella attuale. Nello specifico questo metodo applica mutazioni a individui estratti dalla parte migliore della popolazione attuale per dare vita a una nuova generazione migliorata.\n",
+    "- `Population`: è una classe che può essere visualizzata come un'insieme di `Individual`. Questa classe implementa il metodo `reproduce` che genera una nuova popolazione a partire da quella attuale. Nello specifico questo metodo applica mutazioni a individui estratti dalla parte migliore della popolazione attuale per dare vita a una nuova generazione migliorata.\n",
     "- `Task`: è una classe che nasce in origine per permettere all'utente di stabilire una specifica task, in particolare permette di decidere la modalità di generazione delle città, se giacenti su una circonferenza o all'interno di un quadrato. Ho poi aggiunto tutti quei metodi da chiamare direttamente dal `main` che utilizzano a cascata metodi e istanze relativi alle classi `Individual` e `Population`. Questa classe contiene anche alcuni metodi necessari per scrivere i dati su file di testo esterni.\n",
     "\n",
     "Mostro di seguito alcuni metodi importanti per il funzionamento del programma.\n",
     "\n",
     "#### Classe `Individual`\n",
     "I metodi fondamentali di questa classe sono quelli che implementano le mutazioni:\n",
-    "1. `swap(int position_1, int position_2);`: corrisponde a una permutazione di una coppia di geni. I parametri `n` e `m` identificano la posizione dei geni che si vogliono scambiare all'interno di `genes`. \n",
+    "1. `swap(int position_1, int position_2)`: corrisponde a una permutazione di una coppia di geni. I parametri `position_1` e `position_2` identificano la posizione dei geni che si vogliono scambiare all'interno di `genes`. \n",
     "2. `shift(int position, int m, int n)`: corrisponde a una traslazione di `shift` posizioni di `m` elementi a partire dalla poszione `n`.\n",
     "3. `permutate(int position_1, int position_2, int m)`: corrisponde a una permutazione di una coppia di frammenti di `genes` di dimensione `m`. Gli altri parametri servono a specificare la posizione di partenza dei frammenti di cui fare lo swap.\n",
     "4. `reverse(int position, int m)`: corrisponde all'inversione di un frammento di `genes` di `m` elementi con primo elemento in posizione `position`.\n",
@@ -202,12 +202,12 @@
     "}\n",
     "```\n",
     "\n",
-    "Successivamente, vengono applicate operazioni di mutazione (scambio, inversione, spostamento, permutazione) e crossover ai nuovi individui per introdurre variazioni genetiche. Gli individui mutati vengono quindi controllati per verificare la loro validità e vengono assegnati a sostituire gli individui originali nella popolazione.\n",
+    "Successivamente, vengono applicate operazioni di mutazione (scambio, inversione, spostamento, permutazione) e crossover ai nuovi individui per introdurre variazioni genetiche. Gli individui mutati vengono quindi controllati per verificare la loro validità e sostituiscono, quindi, gli individui originali nella popolazione.\n",
     "\n",
     "#### Classe `Task`\n",
     "\n",
     "I due metodi importanti di questa classe sono i seguenti:\n",
-    "1. `eval_fitness(Individual &chr)`: questo metodo calcola `fitness` di un individuo basandosi sull'ordine dei suoi geni, considerando le distanze tra le città. La fitness viene determinata dall'inverso della distanza totale percorsa.\n",
+    "1. `eval_fitness(Individual &individual)`: questo metodo calcola `fitness` di un individuo basandosi sull'ordine dei suoi geni, considerando le distanze tra le città. La fitness viene determinata dall'inverso della distanza totale percorsa.\n",
     "2. `sort_population(Population &population)`: questo metodo fa uso dell'algoritmo di `quikSort` per riordinare gli individui di una popolazione in base al loro valore di fitness.\n",
     "\n",
     "\n",
@@ -230,7 +230,7 @@
    "metadata": {},
    "source": [
     "#### Città su una circonferenza\n",
-    "Per testare il codice genero $34$ punti su una circonferenza che rappresentano le città che li commesso dovrà visitare. Ovviamente in quesot caso il percorso più breve sarà quello lungo la circonferenza. Per generare le città ho utilizzato il metodo `generate_circular_cities` di `Task`:\n",
+    "Per testare il codice genero $34$ punti su una circonferenza che rappresentano le città che li commesso dovrà visitare. Ovviamente in questo caso il percorso più breve sarà quello lungo la circonferenza. Per generare le città ho utilizzato il metodo `generate_circular_cities` di `Task`:\n",
     "```c++\n",
     "void Task::generate_circular_cities(Random rnd, double radius){\n",
     "    double phi;\n",
@@ -312,7 +312,7 @@
    "id": "7c8625ff",
    "metadata": {},
    "source": [
-    "I queste figure mostro proprio i tragitti che trova il programma. Si può vedere come da una configurazione assolutamente casuale (a sinistra), dopo $500$ generazioni il tragitto migliore è ormai stato scovato. In realtà, come si può vedere dall'animazione, il tragitto migliore viene trovato attrono alla generazione numero $300$. \n",
+    "In queste figure mostro proprio i tragitti che trova il programma. Si può vedere come da una configurazione assolutamente casuale (a sinistra), dopo $500$ generazioni il tragitto migliore è ormai stato scovato. In realtà, come si può vedere dall'animazione, il tragitto migliore viene trovato attorno alla generazione numero $300$. \n",
     "\n",
     "Mostro ora un grafico più quantitativo, dove metto a confronto la lunghezza della circonferenza con la lunghezza del percorso in funzione del numero di generazioni eseguite. Come si può vedere, prima della generazione $250$ il valore di $L$ scende sotto il valore di $2\\pi$, per cui siamo certi che l'algoritmo abbia trovato il percorso migliore. Nello stesso grafico ho mostrato anche l'andamento del valore medio della lunghezza del percorso della metà migliore degli individui per ogni generazione."
    ]
@@ -516,7 +516,7 @@
    "id": "f1224dca",
    "metadata": {},
    "source": [
-    "Come prima, anche questa volta l'algortmo parte da una conformazione casuale e di generazioen in generazione migliora sempre di più. Come già accennato, per scendere sotto la soglia di $L = 10$, ho dovuto riarrangiare i parametri dell'algoritmo. In generale, da questa esercitazione emerge questo limite relativo agli algoritmi genetici: la soluzione che si trova dipende in gran parte dai parametri che si scelgono in fase di inizializzazione. \n",
+    "Come prima, anche questa volta l'algortmo parte da una conformazione casuale e di generazione in generazione migliora sempre di più. Come già accennato, per scendere sotto la soglia di $L = 10$, ho dovuto riarrangiare i parametri dell'algoritmo. In generale, da questa esercitazione emerge questo limite relativo agli algoritmi genetici: la soluzione che si trova dipende in gran parte dai parametri che si scelgono in fase di inizializzazione. \n",
     "\n",
     "Mostro di seguito anche per questo caso un'animazione delle diverse generazioni."
    ]
